# valid_open_api_spec

./: README.md  pyproject.toml
test/: specs.py  test_validator.py
validator/: __init__.py  main.py  schemas.py
